# torchure_smplx

./: .gitignore  CMakeLists.txt  README.md  benchmark.cpp  body_models.cpp  convert.py  fitting.cpp  vertex_joint_selector.cpp
.github/workflows/: libtorch_cpu.yml  libtorch_cpu_open3d.yml
cmake/: torchure_smplxConfig.cmake.in
include/: body_models.hpp  lbs.hpp  utils.hpp  vertex_joint_selector.hpp
include/cnpy/: converter.h
include/model/: smplx.hpp
include/smplx/: converter.hpp  smplx.hpp
samples/: fitting.cpp
samples/consistency_check/: README.md  analysis.py  consistency_check.cpp  original_api.py
samples/minimal_cmake_example/: CMakeLists.txt  README.md  main.cpp
src/model/: lbs.cpp  smplx.cpp
src/smplx/: smplx.cpp
tests/chamferdist/: test_chamfer.cpp  test_chamfer.py
tests/cnpy/: test_cnpy_smpl.cpp  test_cnpy_smplx.cpp
tests/open3d/: test_o3d.cpp
